--- a/WebContent/css/index.css
+++ b/WebContent/css/index.css
@@ -1,6 +1,9 @@
+/* style pour index.jsp */
 header.masthead {
 	background-image: url(../img/header-bg.jpg);
+	height: 45vh;
 }
+
 
 .client-display {
 	display: flex;
@@ -10,13 +13,13 @@ header.masthead {
 }
 
 .client-container {
-	box-shadow : 0.3em 0.3em 3em lightgrey;
+	box-shadow: 0.3em 0.3em 3em lightgrey;
 	padding-top: 2em;
 	padding-bottom: 2em;
 	padding-right: 0.8em;
 	padding-left: 0.8em;
 	margin: .5em;
-	border-radius : 5px;
+	border-radius: 5px;
 }
 
 .button-container {
@@ -34,10 +37,74 @@ header.masthead {
 
 #clients-display {
 	width: 100vw;
+		padding-top:50px;
 }
+
 .name {
-	font-family : MontSerrat;
-	text-align : center;
-	margin-bottom : 2em;
-	font-size : 1.5em;
+	font-family: MontSerrat;
+	text-align: center;
+	margin-bottom: 2em;
+	font-size: 1.5em;
+}
+
+/* style pour account.jsp */
+.head {
+	background-image: url(../img/header-bg.jpg);
+	height: 35vh;
+	background-size: cover;
+	background-position: 10% 75%;
+	margin-bottom: 3em;
+}
+
+.header-account {
+	
+}
+
+.account-body {
+	padding: 0;
+}
+
+.page-title {
+	text-align: center;
+	margin-top: 0.5em;
+	margin-bottom: 1em;
+}
+
+.transfer-button {
+	margin: 0 auto;
+	width: 250px;
+}
+
+.account-list {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+	margin-top: 4.5em;
+}
+
+table {
+	width: 100%;
+}
+
+th, td {
+	padding: 0.5em;
+	text-align: left;
+	border-bottom: 1px solid #212529;
+}
+
+.balance {
+	text-align: right;
+}
+
+tr.data:hover {
+	background-color: #FED136;
+}
+
+tr {
+	transition: 0.6s;
+}
+
+.footer-button {
+	margin: 3em auto;
+	width: 250px;
 }
