--- a/WebContent/css/index.css
+++ b/WebContent/css/index.css
@@ -1,3 +1,10 @@
+body {
+	background-color:#F2F2F2;
+}
+footer {
+	background-color: white;
+}
+
 /* style pour index.jsp */
 header.masthead {
 	background-image: url(../img/header-bg.jpg);
@@ -19,11 +26,13 @@ header.masthead {
 	padding-left: 0.8em;
 	margin: .5em;
 	border-radius: 5px;
+	background-color: white;
 }
 
 .button-container {
 	display: flex;
 	flex-direction: row;
+	justify-content: space-around;
 	margin-top: 0.5em;
 }
 
@@ -32,6 +41,22 @@ header.masthead {
 	margin-bottom: 0em;
 	margin-left: 0em;
 	margin-right: 1em;
+	padding: 0.5em;
+	
+	background-color: #212529;
+	border-radius: 3px;
+	color : white; 
+	border: none; 
+	font-family: Montserrat;
+	font-size: 0.9em;
+	
+	transition: 0.3s;
+}
+
+.button:hover{
+	background-color: #FED136;
+	color: #212529;
+	
 }
 
 #clients-display {
@@ -44,6 +69,11 @@ header.masthead {
 	text-align: center;
 	margin-bottom: 2em;
 	font-size: 1.5em;
+}
+
+.text{
+	font-family: MontSerrat;
+	font-size : 0,8em;
 }
 
 /* style pour account.jsp */
