--- a/src/main/webapp/css/index.css
+++ b/src/main/webapp/css/index.css
@@ -12,7 +12,7 @@ a.logout {
 }
 
 header.masthead {
-	background-image: url(../img/header-bg.jpg);
+	background-image: url(https://images.unsplash.com/photo-1518458028785-8fbcd101ebb9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80);
 	height: 45vh;
 }
 
@@ -83,7 +83,7 @@ header.masthead {
 
 /* style pour account.jsp */
 .head {
-	background-image: url(../img/header-bg.jpg);
+	background-image: url(https://images.unsplash.com/photo-1518458028785-8fbcd101ebb9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80);
 	height: 35vh;
 	background-size: cover;
 	background-position: 10% 75%;
